--- a/index.html
+++ b/index.html
@@ -4,16 +4,37 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
+        <!-- <link rel="stylesheet" href="style.css"> -->
+        <style>
+          button {
+            background-color: pink;
+            color:blue;
+            width: 1000px;
+            height: 100%;
+            border-width: 10px;
+            border-radius: 30px;
+            border-color: blue;
+            border-style: dotted;
+            
+
+          }
+
+
+
+
+
+
+
+
+        </style>
         <title>Document</title>
     </head>
     <body>
-      <div>
-        <h1>
-            oscarsanchez
-        </h1>
-      </div>
-        
+     <button>hi</button>
+      <p>hi</p>  
+      <button >nhgfhghjgh</button>
+      <p>Lorem i</p> 
+      <a href="https://www.youtube.com" target="_blank">daddy</a>
 
 
 
